[metadata]
name = durank
version = 0.2.0
author = Matthew A. Clapp
author_email = Matther Clapp <itsayellow+dev@gmail.com>
description = disk usage with ranking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/itsayellow/durank
keywords = = du, ranking, usage
license = License :: OSI Approved :: MIT License
classifiers =
    Development Status :: 3 Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
zip_safe = true

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    durank = durank.main:cli
